plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.8'
}

group 'com.realizationtime'
version '1.0-SNAPSHOT'

sourceCompatibility = '14'

repositories {
    mavenCentral()
}

ext {
    lombokVersion = '1.18.12'
    javaFxVersion = '14.0.1'
}

javafx {
    version = javaFxVersion
    modules = [ 'javafx.graphics', 'javafx.fxml', 'javafx.controls' ]
}

dependencies {
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
    testCompile "org.assertj:assertj-core:3.11.1"
}

plugins.withType(JavaPlugin).configureEach {
    java {
        modularity.inferModulePath = true
    }
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}

java {
    modularity.inferModulePath.set(true)
}